Avoid size snap on Contact Us page

--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -48,7 +48,7 @@
 </span>
 <span class="tour-element-highlighted">
   <a
-    [routerLink]="[{ outlets: { sidebar: 'contactus' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified/contactus' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
