--- a/packages/StewardClient/src/app/sidebars/settings/settings.component.scss
+++ b/packages/StewardClient/src/app/sidebars/settings/settings.component.scss
@@ -1,8 +1,17 @@
 @import '/src/styles/mixins/';
 
+/* Tasteful margin */
+:host {
+  display: block;
+  padding: 1rem 2rem;
+  min-width: 30vw;
+}
+
 :host ::ng-deep mat-card {
   margin-bottom: $gap-medium;
 }
+
+/* Specific styles */
 
 p {
   display: none;
@@ -37,9 +46,4 @@ span.endpoint-selectors {
   * {
     margin-top: 1em;
   }
-}
-
-:host {
-  display: block;
-  padding: 1rem 2rem;
 }
