--- a/packages/StewardClient/src/app/sidebars/sidebars.component.html
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.html
@@ -52,7 +52,7 @@
         <div mat-subheader><mat-icon inline>help</mat-icon> Get Help</div>
 
         <a mat-list-item
-          [routerLink]="['settings/contactus']"
+          [routerLink]="['contactus']"
           queryParamsHandling="preserve"
           routerLinkActive="list-item-active"
           matTooltip="Forms for contacting Support"
