Do not allow the sidenav to be closed with esc

--- a/packages/StewardClient/src/app/sidebars/sidebars.component.html
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.html
@@ -1,11 +1,11 @@
-<mat-drawer-container>
+<mat-drawer-container esca>
   <!-- Here is where the sidebar content appears. -->
   <mat-drawer-content>
     <router-outlet></router-outlet>
   </mat-drawer-content>
   
   <!-- Here is where the navigation is configured. -->
-  <mat-drawer mode="side" position="end" opened>
+  <mat-drawer mode="side" position="end" opened disableClose>
     <div class="sidebar-navigation">
       <mat-nav-list>
         <a mat-list-item
