--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -70,14 +70,9 @@
   >
     <span class="tour-highlight-buffer" tourAnchor="home-tour.step.two"></span>
     <mat-icon>manage_accounts</mat-icon>
-      <span [matBadge]="changelogNotificationCount > 0 ? changelogNotificationCount : null"
-        matBadgeColor="accent"
-        matBadgeSize="small"
-        matBadgePosition="above after"></span>
-      <span  
-        [matBadge]="notificationCount"
-        [matBadgeColor]="notificationColor"
-        matBadgeSize="small"
-        matBadgePosition="below after"></span>
+    <span [matBadge]="changelogNotificationCount + notificationCount"
+      matBadgeColor="accent"
+      matBadgeSize="small"
+      matBadgePosition="above after"></span>
   </a>
 </span>
