--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -70,9 +70,11 @@
   >
     <span class="tour-highlight-buffer" tourAnchor="home-tour.step.two"></span>
     <mat-icon>manage_accounts</mat-icon>
-    <span [matBadge]="changelogNotificationCount + notificationCount"
+    <span
+      [matBadge]="changelogNotificationCount + notificationCount"
       matBadgeColor="accent"
       matBadgeSize="small"
-      matBadgePosition="above after"></span>
+      matBadgePosition="above after"
+    ></span>
   </a>
 </span>
