--- a/packages/StewardClient/src/app/sidebars/settings/endpoints/endpoints.component.html
+++ b/packages/StewardClient/src/app/sidebars/settings/endpoints/endpoints.component.html
@@ -77,10 +77,7 @@
     >
       <mat-form-field class="set-forte-endpoint" appearance="fill">
         <mat-label>Forte Endpoint</mat-label>
-        <mat-select
-          [(ngModel)]="forteEndpointKey"
-          (selectionChange)="syncForteEndpointKey($event)"
-        >
+        <mat-select [(ngModel)]="forteEndpointKey" (selectionChange)="syncForteEndpointKey($event)">
           <mat-option *ngFor="let endpointKey of steelheadEndpointKeyList" [value]="endpointKey">
             {{ endpointKey }}
           </mat-option>
