Remove current location component from profile page

--- a/packages/StewardClient/src/app/sidebars/sidebars.component.scss
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.scss
@@ -57,4 +57,5 @@ div[mat-subheader] {
 .app-version {
   padding: .5em;
   color: app-color-lighter-contrast($app-background, 70%);
+  text-align: center;
 }
