Require new version as well as unacknowledged changelog entries

--- a/packages/StewardClient/src/app/sidebars/settings/experience/experience.component.html
+++ b/packages/StewardClient/src/app/sidebars/settings/experience/experience.component.html
@@ -21,5 +21,11 @@
     >
       Show Help Icon on Verification Checkboxes</mat-slide-toggle
     >
+    
+    <mat-slide-toggle
+      [(ngModel)]="enableAutomaticChangelogPopup"
+    >
+      Automatically pop out the Changelog when there are new entries.</mat-slide-toggle
+    >
   </mat-card-content>
 </mat-card>
