--- a/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
+++ b/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
@@ -28,7 +28,7 @@
   vertical-align: middle;
   height: 36px;
   line-height: 36px;
-  margin-left: .5em;
+  margin-left: 0.5em;
 }
 
 .drop-list-wrapper,
