--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
@@ -9,7 +9,7 @@
   flex: 0 1 2px;
   min-width: 2px;
   background-color: app-color-default-contrast($app-primary, 0.2);
-  margin: 0 .25em;
+  margin: 0 0.25em;
   border-radius: 1em;
 }
 
