Adjust text on tour toggles

--- a/packages/StewardClient/src/app/sidebars/settings/tours/tours.component.html
+++ b/packages/StewardClient/src/app/sidebars/settings/tours/tours.component.html
@@ -8,7 +8,7 @@
       matTooltip="Toggles tours on and off. Turning this off will disable ALL tours. Must be enabled to display individual tours."
       matTooltipPosition="after"
     >
-      Enable Tours</mat-slide-toggle
+      Automatically begin tours when you find them</mat-slide-toggle
     >
   </mat-card-content>
 </mat-card>
