--- a/packages/StewardClient/src/styles/global/_index.scss
+++ b/packages/StewardClient/src/styles/global/_index.scss
@@ -10,6 +10,7 @@
 @import './mat-expansion-panel.scss';
 @import './angular-material-fa-fix.scss';
 @import './angular-material-icons.scss';
+@import './angular-material-tooltip-clickthrough.scss';
 @import './mat-spinner.scss';
 @import './mat-icon.scss';
 @import './snackbar.scss';
