--- a/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/calendar-lookup-inputs/calendar-lookup-inputs.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/calendar-lookup-inputs/calendar-lookup-inputs.component.html
@@ -22,7 +22,7 @@
             (click)="submitClicked()"
             [disabled]="!identityCalendarScheduleForm.valid"
           >
-            Search <mat-icon svgIcon="steward-arrow-right"></mat-icon>
+            Search <mat-icon>arrow_circle_right</mat-icon>
           </button>
         </div>
       </mat-card>
@@ -54,7 +54,7 @@
             (click)="submitClicked()"
             [disabled]="!pegasusCalendarScheduleForm.valid"
           >
-            Search <mat-icon svgIcon="steward-arrow-right"></mat-icon>
+            Search <mat-icon>arrow_circle_right</mat-icon>
           </button>
         </div>
       </mat-card>
