--- a/packages/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -123,6 +123,7 @@
                 #verifyHideBtn
                 [permissionAttribute]="hidePermAttribute"
                 [permissionTitle]="gameTitle"
+                [disabled]="ugcItem?.isHidden"
               ></verify-button>
               <button
                 class="sf-action-list-margins"
